--- a/hello_world_assignment.ipynb
+++ b/hello_world_assignment.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "hello_world_assignment.ipynb",
+      "name": "Copy of hello_world_assignment.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,15 +17,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/StevenXJiang/ISEN370/blob/Assignment-1/hello_world_assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7Et4sYOiVUAN"
       },
       "source": [
-        "# PSYC 132 (W21): Introduction to Programming for Psychological Scientists\n",
+        "# ISEN 370: Engineering Statistics\n",
         "## Assignment 1: Hello, world!\n",
         "\n",
-        "This first assignment is intended to help you get set up in the course.  You'll also be writing your first lines of Python code!\n",
+        "This assignment aims to assist you to set up the needed tools for the course.  You'll also be writing your first lines of Python code!\n",
         "\n",
-        "If you're a student enrolled in PSYC 132 and you haven't already done so, you should use [this link](https://classroom.github.com/a/xjc-u-1F) to officially accept this assignment.  Like most assignments in this course, all of the files for this assignment are contained in a single GitHub repository (i.e., a collection of files hosted on GitHub's servers).  Assignments are set up using \"template\" repositories.  The idea is that these templates for each assignment will provide a framework for you to work with.  Your job is to follow each assignment's instructions and fill in the missing pieces of code and/or text.\n",
+        "If you're a student enrolled in ISEN 370 and you haven't already done so, you should use [this link](https://classroom.github.com/a/xjc-u-1F) to officially accept this assignment.  Like most assignments in this course, all of the files for this assignment are contained in a single GitHub repository (i.e., a collection of files hosted on GitHub's servers).  Assignments are set up using \"template\" repositories.  The idea is that these templates for each assignment will provide a framework for you to work with.  Your job is to follow each assignment's instructions and fill in the missing pieces of code and/or text.\n",
         "\n",
         "When you accept an assignment (e.g., using the GitHub classroom link above) this uses the assignment's template repository to create a personal \"fork\" (copy) of the files.  A message should inform you where this fork is located (i.e., a web address); this will normally be something like `https://github.com/ContextLab/hello-world-<username>`, where \"`<username>`\" is replaced with your actual GitHub username.\n",
         "\n",
@@ -32,7 +43,7 @@
         "\n",
         "After accepting the assignment using the above link, you should open the `hello_world_assignment.ipynb` notebook in Google Colaboratory by clicking [this link](https://colab.research.google.com/github/ContextLab/psyc32-hello-world/blob/master/hello_world_assignment.ipynb).\n",
         "\n",
-        "**If you've already [accepted this assignment](https://classroom.github.com/a/xjc-u-1F) and are viewing this file in [Google Colaboratory](https://colab.research.google.com/github/ContextLab/psyc32-hello-world/blob/master/hello_world_assignment.ipynb), please continue on.  If you haven't accepted the assignment, or if you aren't viewing this notebook in Google Colaboratory, please follow the above instructions so that you can carry out this assignment.**\n",
+        "**If you've already [accepted this assignment](https://classroom.github.com/a/xjc-u-1F) and are viewing this file in [Google Colaboratory](https://https://colab.research.google.com/github/StevenXJiang/ISEN370/blob/Assignment-1/Copy_of_hello_world_assignment.ipynb), please continue on.  If you haven't accepted the assignment, or if you aren't viewing this notebook in Google Colaboratory, please follow the above instructions so that you can carry out this assignment.**\n",
         "\n",
         "### Assignment goals\n",
         "\n",
@@ -62,52 +73,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "taMUWizwWIY3"
-      },
-      "source": [
-        "# Part 1: Jupyter notebooks, Google Colaboratory, and GitHub\n",
-        "\n",
-        "You should start by going through [this notebook](https://github.com/ContextLab/cs-for-psych/blob/master/slides/module_1/introduction_and_overview.ipynb) to familiarize yourself with Jupyter notebooks and Google Colaboratory (and setting up your Google Colaboratory and GitHub accounts).  Follow the instructions in the notebook to set up your accounts.\n",
-        "\n",
-        "Change the code in the next cell to indicate that you've gone through the introductory notebook, read about Jupyter/Colaboratory notebooks, set up your Google Colaboratory account, and set up your GitHub account.  You should change each variable from `False` to `True` to show which tasks you have (by self-report) accomplished.  Also update the `github_username` variable to indicate your GitHub username. "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7ZlQqKauX_Hp"
-      },
-      "source": [
-        "### BEGIN YOUR CODE\n",
-        "#I have read through the Introduction and Overview notebook\n",
-        "READ_INTRODUCTION = False\n",
-        "\n",
-        "#I understand (at a high level) what Jupyter notebooks are and how to read and\n",
-        "#interact with them (or I have been in touch with the course instructor to ask for help)\n",
-        "LEARNED_ABOUT_JUPYTER = False\n",
-        "\n",
-        "#I've created (or already have) a Google account and can access Google\n",
-        "#Colaboratory under my own account\n",
-        "ACCESS_COLABORATORY = False\n",
-        "\n",
-        "#I've created a GitHub account\n",
-        "CREATED_GITHUB_ACCOUNT = False\n",
-        "github_username = 'username'\n",
-        "\n",
-        "#My info\n",
-        "my_name = 'Name'\n",
-        "### END YOUR CODE"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "9sLVgJynY_WG"
       },
       "source": [
-        "# Part 2: Your first computer program!\n",
+        "# Hello World!\n",
         "\n",
         "Let's learn about the `print` command.  This super useful function lets you display text.  A lot of the programming we'll do in this course will rely on using `print` to display the results of calculations.  We'll also use `print` to \"debug\" our code.  We'll learn more formally about what debugging means, but the general idea is that it's about diagnosing and correcting problems with your computer programs (code).  One simple debugging approach is to have your program periodically print out useful messages (using `print`) to help you understand what's happening.\n",
         "\n",
